[package]
name = "actix-aysnc-cron-scheduler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
reqwest = {version="0.11.11",features = ["json"]}
actix-rt="^2.6"

#cron
cron = "0.11.0"
chrono = { version = "0.4.19",features=['time']}